fix: Ensure GitLab notification runs before exit on failure
- Remove exit 1 from first step that was preventing GitLab notification
- Move exit 1 to end of second step AFTER reporting to GitLab
- This ensures failures are properly reported back to GitLab

Critical fix: notify job was detecting failures correctly but
exiting before it could report the failure back to GitLab.

--- a/.github/workflows/gitops-testing.yml
+++ b/.github/workflows/gitops-testing.yml
@@ -392,10 +392,8 @@ jobs:
             echo "🔗 Original GitLab Pipeline: ${{ github.event.client_payload.gitlab_pipeline_url }}"
           fi
 
-          # Set exit code for GitLab feedback
-          if [ "$overall_status" = "failed" ]; then
-            exit 1
-          fi
+          # Don't exit here - need to report to GitLab first
+          echo "Overall status: $overall_status"
 
       - name: Report status back to GitLab
         if: github.event_name == 'repository_dispatch' && github.event.client_payload.gitlab_commit_sha
@@ -431,3 +429,9 @@ jobs:
               \"description\": \"$description\",
               \"context\": \"github-actions/cluster-testing\"
             }" || echo "⚠️ Failed to report to GitLab (non-blocking)"
+
+          # Exit with failure code AFTER reporting to GitLab
+          if [ "$overall_status" = "failed" ]; then
+            echo "❌ Exiting with failure code after reporting to GitLab"
+            exit 1
+          fi
