fix: Smart triggering logic for documentation-only changes
The previous logic had a bug where *.md pattern matching in case statements
didn't work as expected, causing documentation-only changes to still trigger
GitHub Actions.

Changes:
- Replace case statement pattern matching with explicit bash [[ ]] tests
- Use || operators for cleaner logic flow
- Add continue statement to skip non-documentation files
- Ensure *.md files are properly detected as documentation

This fixes the issue where updating just documentation still triggered
expensive GitHub Actions testing instead of being skipped.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -75,14 +75,18 @@ execute:
 
       # Check for files that require full testing
       for file in $CHANGED_FILES; do
+        # Check if file is documentation-only
+        if [[ "$file" == docs/* ]] || [[ "$file" == "README.md" ]] || [[ "$file" == "CLAUDE.md" ]] || [[ "$file" == *.md ]]; then
+          echo "📖 Documentation change: $file (skip full test)"
+          continue
+        fi
+
+        # Check for core files that require full testing
         case "$file" in
           infra/*|software/*|Makefile|.github/*|.gitlab-ci.yml|.yamllint.yaml|.pre-commit-config.yaml)
             echo "🎯 Found core change: $file"
             NEEDS_FULL_TEST="true"
             break
-            ;;
-          docs/*|README.md|CLAUDE.md|*.md)
-            echo "📖 Documentation change: $file (skip full test)"
             ;;
           *)
             echo "🔧 Other change: $file"
