feat: Implement GitOps stamp pattern with component/application separation
Major Features:
- Add GITOPS_STAMP environment variable support for flexible stamp selection
- Create sample stamp demonstrating component/application architecture
- Implement progressive app complexity model (app1: NodePort, app2: Ingress, app3: LoadBalancer+Ingress)
- Add stamp switching capability via environment variables

GitOps Stamp Architecture:
- Components layer: Infrastructure services (ingress-nginx, postgresql) via HelmReleases
- Applications layer: Business logic (sample-api, sample-website) via Kubernetes manifests
- Service discovery: Applications communicate via Kubernetes DNS
- Namespace isolation: Each component/application in dedicated namespace

Stamp Structure:
- software/stamp/sample/ - GitOps pattern demonstration
- GITOPS_STAMP=sample (default) points to software/stamp/sample/
- Ready for future stamps like GITOPS_STAMP=osdu-ci

App Model Enhancements:
- Fix emoji encoding issues across all apps with UTF-8 charset
- Remove unnecessary NodePort from app3 (production pattern uses LoadBalancer+Ingress)
- Resolve ingress path conflicts with proper path separation
- Fix container image issues (switch from non-existent Microsoft images to standard images)

Makefile Improvements:
- Reorganize commands into logical categories (Setup, Cluster Operations, Tools)
- Enhanced status command with GitOps monitoring and health checking
- Add generic app detection via osdu-ci.app labels
- Fix date formatting and error handling

Infrastructure:
- Update Flux setup script to support stamp selection
- Clean up legacy stamp files (apps/, clusters/, sources/)
- Add comprehensive documentation for stamp patterns
- Support hybrid development (GitOps foundation + manual app layering)

Testing: Successfully deployed and verified sample stamp with working ingress access

--- a/software/apps/app1/app.yaml
+++ b/software/apps/app1/app.yaml
@@ -6,6 +6,7 @@ metadata:
   namespace: default
   labels:
     app: sample-app
+    osdu-ci.app: app1
 spec:
   replicas: 2
   selector:
@@ -18,7 +19,7 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: mcr.microsoft.com/azurelinux/base/nginx
+        image: mcr.microsoft.com/azurelinux/base/nginx:1.25
         ports:
         - containerPort: 80
         resources:
@@ -41,12 +42,15 @@ kind: ConfigMap
 metadata:
   name: sample-app-html
   namespace: default
+  labels:
+    osdu-ci.app: app1
 data:
   index.html: |
     <!DOCTYPE html>
     <html>
     <head>
         <title>OSDU-CI Sample App</title>
+        <meta charset="UTF-8">
         <style>
             body { font-family: Arial, sans-serif; margin: 40px; background: #f5f5f5; }
             .container { max-width: 600px; margin: 0 auto; background: white; padding: 40px; border-radius: 10px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
@@ -94,11 +98,37 @@ kind: Service
 metadata:
   name: sample-app
   namespace: default
+  labels:
+    osdu-ci.app: app1
 spec:
   selector:
     app: sample-app
   ports:
   - port: 80
     targetPort: 80
-    nodePort: 30080
+    nodePort: 30081
   type: NodePort
+---
+# Ingress for app1 (when INGRESS_ENABLED=true)
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: sample-app
+  namespace: default
+  labels:
+    osdu-ci.app: app1
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
+spec:
+  ingressClassName: nginx
+  rules:
+  - host: localhost
+    http:
+      paths:
+      - path: /app1
+        pathType: Prefix
+        backend:
+          service:
+            name: sample-app
+            port:
+              number: 80
