--- a/software/apps/app2/app.yaml
+++ b/software/apps/app2/app.yaml
@@ -1,150 +1,240 @@
-# Sample application demonstrating Kind cluster features
+# App2: Ingress showcase with multiple services and path routing
+# Requires: INGRESS_ENABLED=true
+# Access: http://localhost/frontend, http://localhost/api
+
+---
+# Frontend Service
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: sample-app
+  name: frontend
   namespace: default
   labels:
-    app: sample-app
+    app: frontend
+    osdu-ci.app: app2
 spec:
-  replicas: 3
+  replicas: 2
   selector:
     matchLabels:
-      app: sample-app
+      app: frontend
   template:
     metadata:
       labels:
-        app: sample-app
+        app: frontend
     spec:
       containers:
       - name: nginx
-        image: mcr.microsoft.com/azurelinux/base/nginx
+        image: nginx:alpine
         ports:
         - containerPort: 80
         resources:
           requests:
+            memory: "32Mi"
+            cpu: "25m"
+          limits:
             memory: "64Mi"
             cpu: "50m"
-          limits:
-            memory: "128Mi"
-            cpu: "100m"
         volumeMounts:
         - name: html
           mountPath: /usr/share/nginx/html
       volumes:
       - name: html
         configMap:
-          name: sample-app-html
+          name: frontend-html
+
 ---
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: sample-app-html
+  name: frontend-html
   namespace: default
+  labels:
+    osdu-ci.app: app2
 data:
   index.html: |
     <!DOCTYPE html>
     <html>
     <head>
-        <title>Sample App - Kind Cluster</title>
+        <title>OSDU-CI Frontend</title>
+        <meta charset="UTF-8">
         <style>
-            body { font-family: Arial, sans-serif; margin: 40px; }
-            .container { max-width: 800px; margin: 0 auto; }
-            .status { padding: 20px; background: #e8f5e8; border-radius: 5px; margin: 20px 0; }
-            .info { background: #e8f4f8; padding: 15px; border-radius: 5px; margin: 10px 0; }
-            code { background: #f4f4f4; padding: 2px 6px; border-radius: 3px; }
+            body { font-family: Arial, sans-serif; margin: 40px; background: #f0f8ff; }
+            .container { max-width: 800px; margin: 0 auto; background: white; padding: 40px; border-radius: 10px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
+            .header { padding: 20px; background: #e7f3ff; border: 1px solid #b3d9ff; border-radius: 5px; color: #004085; }
+            .api-section { background: #fff3cd; padding: 15px; border-radius: 5px; color: #856404; margin: 20px 0; }
+            h1 { color: #0066cc; text-align: center; }
+            .btn { background: #007bff; color: white; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer; margin: 5px; }
+            .btn:hover { background: #0056b3; }
+            #api-result { background: #f8f9fa; padding: 15px; border-radius: 5px; margin-top: 10px; font-family: monospace; }
         </style>
     </head>
     <body>
         <div class="container">
-            <h1>🎉 Kind Cluster Sample Application</h1>
+            <h1>🌐 Frontend Service</h1>
 
-            <div class="status">
-                <h2>✅ Deployment Successful!</h2>
-                <p>Your Kind cluster is working correctly if you can see this page.</p>
-            </div>
-
-            <div class="info">
-                <h3>Connection Details</h3>
+            <div class="header">
+                <h2>🎯 Ingress Demo</h2>
+                <p>This frontend is served via <strong>path-based routing</strong> on the ingress controller.</p>
                 <ul>
-                    <li><strong>Pod Name:</strong> <span id="hostname">Loading...</span></li>
-                    <li><strong>Service:</strong> sample-app</li>
-                    <li><strong>Namespace:</strong> default</li>
-                    <li><strong>Access via:</strong> LoadBalancer and/or Ingress</li>
+                    <li><strong>Frontend:</strong> <a href="/frontend/">/frontend/</a></li>
+                    <li><strong>API:</strong> <a href="/api/">/api/</a></li>
                 </ul>
             </div>
 
-            <div class="info">
-                <h3>Test Commands</h3>
-                <p>Try these commands in your terminal:</p>
-                <ul>
-                    <li><code>kubectl get pods -l app=sample-app</code></li>
-                    <li><code>kubectl get svc sample-app</code></li>
-                    <li><code>kubectl describe ingress sample-app</code></li>
-                    <li><code>kubectl logs -l app=sample-app</code></li>
-                </ul>
-            </div>
-
-            <div class="info">
-                <h3>Scaling Test</h3>
-                <p>Scale the deployment:</p>
-                <ul>
-                    <li><code>kubectl scale deployment sample-app --replicas=5</code></li>
-                    <li><code>kubectl scale deployment sample-app --replicas=1</code></li>
-                </ul>
+            <div class="api-section">
+                <h3>🔌 API Integration Test</h3>
+                <p>Test service-to-service communication via ingress:</p>
+                <button class="btn" onclick="callAPI()">Call API Service</button>
+                <div id="api-result"></div>
             </div>
         </div>
 
         <script>
-            // Show the actual pod hostname
-            fetch('/api/hostname')
-                .then(response => response.text())
-                .then(data => {
-                    document.getElementById('hostname').textContent = data;
-                })
-                .catch(() => {
-                    document.getElementById('hostname').textContent = window.location.hostname || 'Unknown';
-                });
+        async function callAPI() {
+            const result = document.getElementById('api-result');
+            result.innerHTML = 'Calling API...';
+
+            try {
+                const response = await fetch('/api/');
+                const text = await response.text();
+                result.innerHTML = `<strong>API Response:</strong><br>${text}`;
+            } catch (error) {
+                result.innerHTML = `<strong>Error:</strong> ${error.message}`;
+            }
+        }
         </script>
     </body>
     </html>
+
 ---
-# ClusterIP Service (internal access)
 apiVersion: v1
 kind: Service
 metadata:
-  name: sample-app
+  name: frontend
   namespace: default
+  labels:
+    osdu-ci.app: app2
 spec:
   selector:
-    app: sample-app
+    app: frontend
   ports:
-  - name: http
-    port: 80
+  - port: 80
     targetPort: 80
   type: ClusterIP
+
 ---
-# LoadBalancer Service (external access via MetalLB)
+# API Service
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: api
+  namespace: default
+  labels:
+    app: api
+    osdu-ci.app: app2
+spec:
+  replicas: 2
+  selector:
+    matchLabels:
+      app: api
+  template:
+    metadata:
+      labels:
+        app: api
+    spec:
+      containers:
+      - name: nginx
+        image: nginx:alpine
+        ports:
+        - containerPort: 80
+        resources:
+          requests:
+            memory: "32Mi"
+            cpu: "25m"
+          limits:
+            memory: "64Mi"
+            cpu: "50m"
+        volumeMounts:
+        - name: html
+          mountPath: /usr/share/nginx/html
+      volumes:
+      - name: html
+        configMap:
+          name: api-html
+
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: api-html
+  namespace: default
+  labels:
+    osdu-ci.app: app2
+data:
+  index.html: |
+    <!DOCTYPE html>
+    <html>
+    <head>
+        <title>OSDU-CI API</title>
+        <meta charset="UTF-8">
+        <style>
+            body { font-family: Arial, sans-serif; margin: 40px; background: #f0fff0; }
+            .container { max-width: 600px; margin: 0 auto; background: white; padding: 40px; border-radius: 10px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
+            .api-info { padding: 20px; background: #d4edda; border: 1px solid #c3e6cb; border-radius: 5px; color: #155724; }
+            h1 { color: #28a745; text-align: center; }
+            code { background: #f8f9fa; padding: 2px 6px; border-radius: 3px; color: #e83e8c; }
+        </style>
+    </head>
+    <body>
+        <div class="container">
+            <h1>🚀 API Service</h1>
+
+            <div class="api-info">
+                <h2>✅ API Service Active</h2>
+                <p>This API service demonstrates:</p>
+                <ul>
+                    <li><strong>Path-based routing:</strong> <code>/api/</code></li>
+                    <li><strong>Service discovery:</strong> ClusterIP communication</li>
+                    <li><strong>Ingress routing:</strong> HTTP request routing</li>
+                    <li><strong>Multi-service apps:</strong> Frontend + API separation</li>
+                </ul>
+
+                <h3>📊 Service Info</h3>
+                <ul>
+                    <li><strong>Service:</strong> api.default.svc.cluster.local</li>
+                    <li><strong>Replicas:</strong> 2</li>
+                    <li><strong>Access:</strong> http://localhost/api/</li>
+                </ul>
+            </div>
+        </div>
+    </body>
+    </html>
+
+---
 apiVersion: v1
 kind: Service
 metadata:
-  name: sample-app-lb
+  name: api
   namespace: default
+  labels:
+    osdu-ci.app: app2
 spec:
   selector:
-    app: sample-app
+    app: api
   ports:
-  - name: http
-    port: 80
+  - port: 80
     targetPort: 80
-  type: LoadBalancer
+  type: ClusterIP
+
 ---
-# Ingress (HTTP access via NGINX)
+# Ingress with path-based routing
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: sample-app
+  name: app2-ingress
   namespace: default
+  labels:
+    osdu-ci.app: app2
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
@@ -153,19 +243,17 @@ spec:
   - host: localhost
     http:
       paths:
-      - path: /sample-app
+      - path: /frontend
         pathType: Prefix
         backend:
           service:
-            name: sample-app
+            name: frontend
             port:
               number: 80
-  - http:  # Default rule (no host specified)
-      paths:
-      - path: /
+      - path: /api
         pathType: Prefix
         backend:
           service:
-            name: sample-app
+            name: api
             port:
               number: 80
