refactor: Reorganize apps into sample/ subdirectory structure
- Move app1, app2, app3 into software/apps/sample/ subdirectory
- Update Makefile deploy command to support nested paths (make deploy sample/app1)
- Change default APP_DEPLOY from app1 to sample/app1
- Update .env.example documentation to reflect new nested app structure
- Add Make targets for nested app path arguments (sample/app1, sample/app2, sample/app3)
- Enhance app discovery to show nested paths when invalid app specified
- Update usage examples in .env.example for new deployment syntax

This creates better organization where apps are grouped by deployment pattern,
making it easier to distinguish between GitOps-deployed applications (stamps)
and manually-deployed applications (apps), while maintaining the same sample
theme for consistency.

--- a/.env.example
+++ b/.env.example
@@ -48,8 +48,8 @@ GITOPS_STAMP=
 # =============================================================================
 
 # Default application to deploy with 'make deploy'
-# Options: app1 (basic NodePort), app2 (Ingress), app3 (LoadBalancer+Ingress)
-APP_DEPLOY=app1
+# Options: sample/app1 (basic NodePort), sample/app2 (Ingress), sample/app3 (LoadBalancer+Ingress)
+APP_DEPLOY=sample/app1
 
 # =============================================================================
 # OPTIONAL SERVICES
@@ -83,9 +83,9 @@ MONITORING_ENABLED=false
 # make up minimal             # Use minimal Kind configuration
 
 # Manual app deployment (works with any cluster configuration)
-# make deploy app1            # Basic NodePort app
-# make deploy app2            # Ingress showcase (requires INGRESS_ENABLED=true)
-# make deploy app3            # Production patterns (requires METALLB_ENABLED=true + INGRESS_ENABLED=true)
+# make deploy sample/app1     # Basic NodePort app
+# make deploy sample/app2     # Ingress showcase (requires INGRESS_ENABLED=true)
+# make deploy sample/app3     # Production patterns (requires METALLB_ENABLED=true + INGRESS_ENABLED=true)
 
 # Hybrid approach (GitOps foundation + manual experimentation)
 # make up sample              # Start with GitOps sample stamp
