--- a/infra/kubernetes/kind-config.yaml
+++ b/infra/kubernetes/kind-config.yaml
@@ -9,6 +9,16 @@ networking:
   serviceSubnet: "10.96.0.0/12"
   kubeProxyMode: "iptables"
 
+# Configure containerd to use local registry with HTTPS support
+containerdConfigPatches:
+- |-
+  [plugins."io.containerd.grpc.v1.cri".registry.mirrors."localhost:5000"]
+    endpoint = ["https://registry.registry.svc.cluster.local:5443", "http://registry.registry.svc.cluster.local:5000"]
+  [plugins."io.containerd.grpc.v1.cri".registry.mirrors."localhost:5443"]
+    endpoint = ["https://registry.registry.svc.cluster.local:5443"]
+  [plugins."io.containerd.grpc.v1.cri".registry.configs."registry.registry.svc.cluster.local:5443".tls]
+    insecure_skip_verify = true
+
 nodes:
 - role: control-plane
   image: kindest/node:v1.33.2
@@ -31,6 +41,12 @@ nodes:
     protocol: TCP
   - containerPort: 30443
     hostPort: 8443
+    protocol: TCP
+  - containerPort: 30500
+    hostPort: 5001
+    protocol: TCP
+  - containerPort: 30543
+    hostPort: 5443
     protocol: TCP
 
   extraMounts:
