--- a/software/components/cert-manager/kustomization.yaml
+++ b/software/components/cert-manager/kustomization.yaml
@@ -2,10 +2,10 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 # Cert-manager shared component for local development
-# Provides certificate management with self-signed CA
+# Phase 1: Install cert-manager (CRDs, controllers)
 
 resources:
   - namespace.yaml
   - source.yaml
   - release.yaml
-  - cluster-issuer.yaml
+  - issuer.yaml
