--- a/software/components/cert-manager/kustomization.yaml
+++ b/software/components/cert-manager/kustomization.yaml
@@ -1,11 +1,28 @@
-apiVersion: kustomize.config.k8s.io/v1beta1
+apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
-
-# Cert-manager shared component for local development
-# Phase 1: Install cert-manager (CRDs, controllers)
-
-resources:
-  - namespace.yaml
-  - source.yaml
-  - release.yaml
-  - issuer.yaml
+metadata:
+  name: cert-manager
+  namespace: flux-system
+spec:
+  interval: 1h
+  retryInterval: 1m
+  timeout: 5m
+  path: "./software/components/cert-manager"
+  prune: true
+  wait: true
+  sourceRef:
+    kind: GitRepository
+    name: osdu-ci-repo
+  healthChecks:
+    - apiVersion: apps/v1
+      kind: Deployment
+      name: cert-manager
+      namespace: cert-manager
+    - apiVersion: apps/v1
+      kind: Deployment
+      name: cert-manager-cainjector
+      namespace: cert-manager
+    - apiVersion: apps/v1
+      kind: Deployment
+      name: cert-manager-webhook
+      namespace: cert-manager
