fix: flux setup

--- a/software/stamp/sample/flux-templates/kustomization-applications.yaml
+++ b/software/stamp/sample/flux-templates/kustomization-applications.yaml
@@ -11,4 +11,4 @@ spec:
     kind: GitRepository
     name: ${REPO_NAME}-repo
   dependsOn:
-    - name: stamp-${GITOPS_STAMP}-components
+    - name: registry
